// Copyright 2019 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
package openmatch.internal;
option go_package = "open-match.dev/open-match/internal/ipb";

import "api/messages.proto";

message SynchronizeRequest {
  // A match returned by an mmf.
  openmatch.Match proposal = 1;
}

message SynchronizeResponse {
  // Instructs the backend call that it can start running the mmfs.
  bool start_mmfs = 1;

  // Instructs the backend call that it should cancel any RPC calls to the mmfs,
  // not send any more matches, and close the send stream.
  bool cancel_mmfs = 2;

  // A match which passes evaluation and should be returned to the FetchMatches
  // caller.
  openmatch.Match match = 3;
}

// The service implementing the Synchronizer API that synchronizes the evaluation
// of proposals returned from Match functions.
service Synchronizer {
  // Synchronize signals the caller when it is safe to run mmfs, collects the
  // mmfs' proposals, and returns the evaluated matches.
  rpc Synchronize(stream SynchronizeRequest) returns (stream SynchronizeResponse);
}


